Establishment of the first page.

--- a/mickael-blog/static/img/desktop.ini
+++ b/mickael-blog/static/img/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Foundational-C#_Certification.png=@Foundational-C#_Certification.png,0
+certification.png=@certification.png,0
