add architecture blog

--- a/mickael-blog/blog/authors.yml
+++ b/mickael-blog/blog/authors.yml
@@ -1,5 +1,5 @@
 mickael:
   name: Mickaël Céraline
-  title: Développer Full Stack
+  title: Développeur Full Stack
   url: https://github.com/mickaelcrl
-  image_url: /static/img/aproposdemoi.png
+  
